<resources>
    <string name="app_name">Tukang-In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="email_notelp">Email/No-Telp</string>
    <string name="registrasi">Registrasi</string>
    <string name="masuk">Masuk</string>
    <string name="App_name">Tukang-in</string>
    <string name="desc">Terpercaya</string>
    <string name="tukang_name">Nama tukang</string>
    <string name="input_placeholder">Write a message</string>
    <string name="chat">Chat</string>
    <string name="Booking">Booking</string>
    <integer name="rating">4</integer>
    <integer name="jarak">12</integer>
</resources>