<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regisbg">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/masuk"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:id="@+id/txtmasuk">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/txtmasuk"
        android:padding="50dp"
        android:id="@+id/layout1">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/btn"
            android:hint="@string/email_notelp"
            android:paddingLeft="50dp"
            android:textColorHint="@color/hint"
            android:paddingBottom="10dp"
            android:fontFamily="@font/robotomedium" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/btn"
            android:hint="Password"
            android:paddingLeft="50dp"
            android:textColorHint="@color/hint"
            android:paddingBottom="10dp"
            android:fontFamily="@font/robotomedium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textColor="@color/white"
            android:fontFamily="@font/robotomedium"
            android:paddingLeft="25dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:id="@+id/layout2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk_dengan_google"
            android:textColor="@color/white"
            android:fontFamily="@font/robotomedium"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />

        <Button

            android:layout_width="136dp"
            android:layout_height="51dp"
            android:background="@drawable/btnonclick"
            android:layout_marginLeft="135dp"
            android:hint="@string/masuk"
            android:textColorHint="@color/brown"
            android:fontFamily="@font/robotomedium"
            android:paddingBottom="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout3"
        android:orientation="horizontal"
        android:layout_below="@id/layout2"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belum punya akun?"
            android:textColor="@color/white"
            android:fontFamily="@font/robotomedium"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrasi"
            android:textColor="@color/black"
            android:fontFamily="@font/robotomedium"

            />


    </LinearLayout>









</RelativeLayout>